# reader

./: Cargo.toml  Makefile  Readme.md  config.json  flake.nix
.github/workflows/: check.yaml
output/: output_2024-02-03.md  output_2024-02-05.md  output_2024-02-06.md  output_2024-02-07.md  output_2024-02-08.md  output_2024-02-09.md  output_2024-02-10.md  output_2024-02-12.md  output_2024-02-13.md  output_2024-02-14.md  output_2024-02-15.md  output_2024-02-16.md  output_2024-02-18.md  output_2024-02-19.md  output_2024-02-20.md  output_2024-02-21.md  output_2024-02-22.md  output_2024-02-23.md  output_2024-02-26.md  output_2024-02-27.md  output_2024-02-28.md  output_2024-02-29.md  output_2024-03-01.md  output_2024-03-04.md  output_2024-03-05.md  output_2024-03-06.md  output_2024-03-07.md  output_2024-03-08.md  output_2024-03-10.md  output_2024-03-11.md  output_2024-03-12.md  output_2024-03-13.md  output_2024-03-14.md  output_2024-03-15.md  output_2024-03-18.md  output_2024-03-19.md  output_2024-03-20.md  output_2024-03-21.md  output_2024-03-22.md  output_2024-03-23.md  (+302 more)
src/: atom.rs  config.rs  feed.rs  get.rs  main.rs  summary.rs
