[package]
name = "reader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }
rss = "2.0.7"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
atom_syndication = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = {version="4.4.18", features = ["cargo"] }
env_logger = { version = "0.10", features = [] }
log = "0.4"
select = "0.6.0"
